--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
@@ -43,7 +44,7 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-core</artifactId>
             <version>${maven.version}</version>
-            <scope>test</scope>
+            <!--<scope>test</scope>-->
         </dependency>
 
         <dependency>
@@ -57,8 +58,9 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-model</artifactId>
             <version>${maven.version}</version>
-            <scope>test</scope>
+            <!--<scope>test</scope>-->
         </dependency>
+
 
 
 
@@ -91,6 +93,7 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
 
@@ -100,6 +103,9 @@
                 <groupId>com.mckesson.esb.maven</groupId>
                 <artifactId>tibco-deployment-maven-plugin</artifactId>
                 <version>${project.version}</version>
+                <!--<configuration>-->
+                    <!--<url>http://localhost:8079/bw/v1/</url>-->
+                <!--</configuration>-->
                 <!--<executions>-->
                     <!--<execution>-->
                         <!--<phase>compile</phase>-->
